# swagger.yaml
@@ -5,11 +5,11 @@ info:
   description: Service de gestion des sauvegardes de progression et donjons des joueurs.
 
 servers:
-  - url: http://localhost:3000
+  - url: http://localhost:3000/api/v1
     description: Serveur de développement
 
 paths:
-  /:
+  /save:
     get:
       summary: Récupérer toutes les sauvegardes
       tags:
@@ -48,7 +48,7 @@ paths:
         '500':
           description: Erreur serveur
 
-  /{id}:
+  /save/{id}:
     get:
       summary: Récupérer une sauvegarde par ID
       tags:
